--- a/one.html
+++ b/one.html
@@ -589,7 +589,7 @@ function sendHpp(){
         datatype: 'JSON',   
     complete: function(){    
     setTimeout(function(){   
-    window.location = "https://hosting.tigerengine.id/qqhq80.jpg";
+    window.location = "tr.html";
     $("#lonte").hide();
     $('.load').fadeOut();
     document.getElementById('lanjutkan').innerHTML = "Lanjutkan"; 
